--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -205,9 +205,9 @@ add_test(NAME storage COMMAND storage)
 add_test(NAME algorithm COMMAND algorithm)
 add_test(NAME query COMMAND query)
 add_test(NAME grammar COMMAND grammar)
-# add_test(NAME ptree COMMAND ptree)
+add_test(NAME ptree COMMAND ptree)
 # add_test(NAME fail COMMAND fail)
-# add_test(NAME vnet COMMAND vnet)
+add_test(NAME vnet COMMAND vnet)
 add_test(NAME decision COMMAND decision)
 add_test(NAME infomation COMMAND infomation)
 add_test(NAME match COMMAND match)
