--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   pre-install:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - name: install-flex
       run: |
