--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         # os: [windows-latest, ubuntu-latest]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-20.04, macos-latest, windows-latest]
 
     steps:
     - name: checkout
@@ -68,12 +68,12 @@ jobs:
         ctest -C Debug --rerun-failed --output-on-failure
     - name: Generate Coverage Report
       working-directory: ${{github.workspace}}/build
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'ubuntu-20.04'
       run: |
         make coverage
     - name: Upload Report to Codecov
       uses: codecov/codecov-action@v1.3.2
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'ubuntu-20.04'
       with:
         files: ${{github.workspace}}/build/coverage.xml
         fail_ci_if_error: true
