--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -113,6 +113,8 @@ set(FAIL_SOURCE ./fail.cpp
 	${SYMBOLS_SOURCE}
 )
 
+set(BENCHMARK_SOURCE ./benchmark.cpp)
+
 IF (APPLE)
 ELSEIF (UNIX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -finstrument-functions")
@@ -132,12 +134,14 @@ add_executable(decision ${DECISION_SOURCE})
 add_executable(infomation ${INFOMATION_SOURCE})
 add_executable(match ${MATCH_SOURCE})
 # add_executable(fail ${FAIL_SOURCE})
+add_executable(benchmark ${BENCHMARK_SOURCE})
 
 set(storage_LINK_OPTIONS fmt::fmt-header-only mdbx-static)
 set(vnet_LINK_OPTIONS fmt::fmt-header-only)
 set(grammar_LINK_OPTIONS gqlite fmt::fmt-header-only)
 set(movielens_LINK_OPTIONS gqlite)
 set(regress_LINK_OPTIONS gqlite fmt::fmt-header-only)
+set(benchmark_LINK_OPTIONS gqlite fmt::fmt-header-only)
 # set(fail_LINK_OPTIONS gqlite)
 IF (UNIX AND NOT APPLE AND NOT (CMAKE_SYSTEM_NAME MATCHES "Android"))
 set(TARGETS_OF_LEAK_TO_CHECK storage vnet movielens decision infomation decision match query)
@@ -154,6 +158,7 @@ ENDIF ()
 # set_property(TARGET algorithm PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/test")
 target_link_libraries(grammar PUBLIC ${grammar_LINK_OPTIONS})
 target_link_libraries(regress PUBLIC ${regress_LINK_OPTIONS})
+target_link_libraries(benchmark PUBLIC ${benchmark_LINK_OPTIONS})
 # target_link_libraries(fail PUBLIC ${fail_LINK_OPTIONS})
 add_dependencies(storage zstd)
 add_dependencies(query zstd)
@@ -167,6 +172,7 @@ target_link_libraries(query PUBLIC ${CMAKE_DL_LIBS} m)
 target_link_libraries(movielens PUBLIC ${CMAKE_DL_LIBS} m )
 target_link_libraries(grammar PUBLIC ${CMAKE_DL_LIBS} m )
 target_link_libraries(regress PUBLIC ${CMAKE_DL_LIBS} m )
+target_link_libraries(benchmark PUBLIC ${CMAKE_DL_LIBS} m )
 endif(GQLITE_BUILD_TEST)
 ELSE() # UNIX
 target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS})
@@ -207,7 +213,7 @@ add_test(NAME query COMMAND query)
 add_test(NAME grammar COMMAND grammar)
 add_test(NAME ptree COMMAND ptree)
 # add_test(NAME fail COMMAND fail)
-# add_test(NAME vnet COMMAND vnet)
+add_test(NAME vnet COMMAND vnet)
 add_test(NAME decision COMMAND decision)
 add_test(NAME infomation COMMAND infomation)
 add_test(NAME match COMMAND match)
