--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -121,7 +121,6 @@ ELSE ()
 ENDIF ()
 
 add_executable(grammar ${TEST_GRAMMAR_SOURCE})
-add_compile_definitions(BINARY_DIR="${zstd_BINARY_DIR}/lib")
 add_executable(storage ${STORAGE_SOURCE})
 add_executable(regress ${REGRESS_SOURCE})
 add_executable(algorithm ${ALGRITHM_SOURCE})
@@ -159,12 +158,9 @@ target_link_libraries(grammar PUBLIC ${grammar_LINK_OPTIONS})
 target_link_libraries(regress PUBLIC ${regress_LINK_OPTIONS})
 target_link_libraries(benchmark PUBLIC ${benchmark_LINK_OPTIONS})
 # target_link_libraries(fail PUBLIC ${fail_LINK_OPTIONS})
-add_dependencies(storage zstd)
-add_dependencies(query zstd)
 IF (UNIX)
-link_directories(${zstd_BINARY_DIR}/lib)
-target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS} ${zstd_BINARY_DIR}/lib/libzstd.a)
-target_link_libraries(query PUBLIC ${storage_LINK_OPTIONS} ${zstd_BINARY_DIR}/lib/libzstd.a)
+target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS})
+target_link_libraries(query PUBLIC ${storage_LINK_OPTIONS})
 if (GQLITE_BUILD_TEST)
 target_link_libraries(storage PUBLIC ${CMAKE_DL_LIBS} m)
 target_link_libraries(query PUBLIC ${CMAKE_DL_LIBS} m)
