fix c example core dump

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ endif(CMAKE_SYSTEM_NAME MATCHES "Android")
 enable_testing()
 add_subdirectory(tool)
 add_subdirectory(test)
+add_subdirectory(example)
 else ()
 add_subdirectory(tool)
 endif()
