fix coroutine error

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -194,6 +194,7 @@ target_link_libraries(algorithm log)
 # target_link_libraries(ptree log)
 # target_link_libraries(regress log)
 # target_link_libraries(movielens log)
+target_link_libraries(coroutine gqlite log)
 else ()
 target_link_libraries(vnet ${vnet_LINK_OPTIONS} pthread)
 endif ()
