--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,13 @@ set(GQLITE_ASM_SUFFIX "S")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 set(GQLITE_ASM_COMPILER "clang_gas")
 set(GQLITE_ASM_SUFFIX "S")
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
+set(GQLITE_ASM_COMPILER "gas")
+set(GQLITE_ASM_SUFFIX "S")
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
+set(all_archs arm arm64 loongarch64 mips32 mips64 ppc32 ppc64 riscv64 s390x i386 x86_64 combined)
 IF (WIN32)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 set(GQLITE_TARGET_SYSTEM "ms_pe")
@@ -63,14 +67,21 @@ endif ()
 # ANDDOID
 if (CMAKE_SYSTEM_NAME MATCHES "Android")
 	add_definitions(-DANDROID_ARM_NEON=TRUE)
+	set(GQLITE_ASM_COMPILER "gas")
 	if (ANDROID_ABI MATCHES "armeabi-v7a")
 		add_definitions(-D__ARM_ARCH_2__)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon -marm")
+		set(GQLITE_CPU_ARCHITECHURE "arm")
+		set(GQLITE_TARGET_SYSTEM "aapcs_elf")
 	elseif (ANDROID_ABI MATCHES "arm64-v8a")
+		set(GQLITE_CPU_ARCHITECHURE "arm64")
+		set(GQLITE_TARGET_SYSTEM "aapcs_elf")
 	elseif(ANDROID_ABI MATCHES "x86_64")
 		add_definitions(-D__x86_64__)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pie -std=c99")
+		set(GQLITE_CPU_ARCHITECHURE "x86_64")
+		set(GQLITE_TARGET_SYSTEM "sysv_elf")
 	elseif(ANDROID_ABI MATCHES "x86")
 		add_definitions(-D__x86_64__)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
