coroutine for multiple cpu arch && ci test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,27 +9,76 @@ include(TargetArch.cmake)
 target_architecture(GQLITE_CPU_ARCHITECHURE)
 
 message("Check Compiler: " ${CMAKE_CXX_COMPILER})
-if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-set(GQLITE_ASM_COMPILER "masm")
-set(GQLITE_ASM_SUFFIX "asm")
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-set(GQLITE_ASM_COMPILER "gas")
-set(GQLITE_ASM_SUFFIX "S")
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-set(GQLITE_ASM_COMPILER "clang_gas")
-set(GQLITE_ASM_SUFFIX "S")
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-set(GQLITE_ASM_COMPILER "gas")
-set(GQLITE_ASM_SUFFIX "S")
+
+if(WIN32)
+  set(GQLITE_ASM_BINFMT pe)
+elseif(APPLE)
+  set(GQLITE_ASM_BINFMT macho)
+else()
+  set(GQLITE_ASM_BINFMT elf)
 endif()
 
+math(EXPR _bits "${CMAKE_SIZEOF_VOID_P}*8")
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "^[Aa][Rr][Mm]" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
+  set(GQLITE_ASM_ABI aapcs)
+elseif(WIN32)
+  set(GQLITE_ASM_ABI ms)
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^mips")
+	if(_bits EQUAL 32)
+    set(GQLITE_ASM_ABI o32)
+  else()
+    set(GQLITE_ASM_ABI n64)
+  endif()
+else()
+  set(GQLITE_ASM_ABI sysv)
+endif()
+
+set(GQLITE_ALL_ARCHS arm arm64 loongarch64 mips32 mips64 ppc32 ppc64 riscv64 s390x i386 x86_64 combined)
+if(CMAKE_SYSTEM_PROCESSOR IN_LIST GQLITE_ALL_ARCHS)
+  set(GQLITE_CPU_ARCHITECHURE ${CMAKE_SYSTEM_PROCESSOR})
+elseif(_bits EQUAL 32)
+  if(CMAKE_SYSTEM_PROCESSOR MATCHES "^[Aa][Rr][Mm]")
+    set(GQLITE_CPU_ARCHITECHURE arm)
+  elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^mips")
+    set(GQLITE_CPU_ARCHITECHURE mips32)
+  else()
+    set(GQLITE_CPU_ARCHITECHURE i386)
+  endif()
+else()
+  if(CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64" OR
+    CMAKE_SYSTEM_PROCESSOR MATCHES "^[Aa][Rr][Mm]") # armv8
+    set(GQLITE_CPU_ARCHITECHURE arm64)
+  elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^mips")
+    set(GQLITE_CPU_ARCHITECHURE mips64)
+  else()
+    set(GQLITE_CPU_ARCHITECHURE x86_64)
+  endif()
+endif()
+
+if(MSVC)
+  if(GQLITE_CPU_ARCHITECHURE STREQUAL arm64 OR GQLITE_CPU_ARCHITECHURE STREQUAL arm)
+    set(GQLITE_ASSEMBLER armasm)
+  else()
+    set(GQLITE_ASSEMBLER masm)
+  endif()
+else()
+  set(GQLITE_ASSEMBLER gas)
+endif()
+
+if(GQLITE_ASM_BINFMT STREQUAL pe)
+  set(GQLITE_ASM_EXT .asm)
+elseif(GQLITE_ASSEMBLER STREQUAL gas)
+  set(GQLITE_ASM_EXT .S)
+else()
+  set(GQLITE_ASM_EXT .asm)
+endif()
+
+set(GQLITE_ASM_SUFFUX ${GQLITE_CPU_ARCHITECHURE}_${GQLITE_ASM_ABI}_${GQLITE_ASM_BINFMT}_${GQLITE_ASSEMBLER}${GQLITE_ASM_EXT})
+
 set(CMAKE_CXX_STANDARD 17)
-set(all_archs arm arm64 loongarch64 mips32 mips64 ppc32 ppc64 riscv64 s390x i386 x86_64 combined)
 IF (WIN32)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
-set(GQLITE_TARGET_SYSTEM "ms_pe")
 enable_language(ASM_MASM)
-message("- asm compiler: " ${CMAKE_ASM_COMPILER})
 # foreach(CMAKE_TARGET_FLAG
 # 	CMAKE_C_FLAGS_DEBUG_INIT
 # 	CMAKE_C_FLAGS_RELEASE_INIT
@@ -48,7 +97,6 @@ message("- asm compiler: " ${CMAKE_ASM_COMPILER})
 ELSEIF (APPLE)
 set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -fpic -ftree-vectorize -Ofast")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize -mavx")
-set(GQLITE_TARGET_SYSTEM "sysv_macho")
 enable_language(ASM)
 # if (CMAKE_SYSTEM_NAME MATCHES "Android")
 # add_definitions(-DANDROID_ARM_NEON=TRUE)
@@ -58,7 +106,6 @@ enable_language(ASM)
 ELSEIF (UNIX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -ftree-vectorize")
 set(CMAKE_C_FLAGS "-Wno-writable-strings -Wno-comment")
-set(GQLITE_TARGET_SYSTEM "sysv_elf")
 enable_language(ASM)
 
 if (GQLITE_BUILD_TEST)
@@ -67,21 +114,14 @@ endif ()
 # ANDDOID
 if (CMAKE_SYSTEM_NAME MATCHES "Android")
 	add_definitions(-DANDROID_ARM_NEON=TRUE)
-	set(GQLITE_ASM_COMPILER "gas")
 	if (ANDROID_ABI MATCHES "armeabi-v7a")
 		add_definitions(-D__ARM_ARCH_2__)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon -marm")
-		set(GQLITE_CPU_ARCHITECHURE "arm")
-		set(GQLITE_TARGET_SYSTEM "aapcs_elf")
 	elseif (ANDROID_ABI MATCHES "arm64-v8a")
-		set(GQLITE_CPU_ARCHITECHURE "arm64")
-		set(GQLITE_TARGET_SYSTEM "aapcs_elf")
 	elseif(ANDROID_ABI MATCHES "x86_64")
 		add_definitions(-D__x86_64__)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pie -std=c99")
-		set(GQLITE_CPU_ARCHITECHURE "x86_64")
-		set(GQLITE_TARGET_SYSTEM "sysv_elf")
 	elseif(ANDROID_ABI MATCHES "x86")
 		add_definitions(-D__x86_64__)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
@@ -157,9 +197,11 @@ add_definitions(-DTHREAD_COUNT=4)
 include_directories(./include ./third_party/libmdbx ./third_party/eigen ./third_party/fmt/include)
 
 file(GLOB_RECURSE BASE_SOURCES "src/*.cpp")
-message("asm: *_" ${GQLITE_CPU_ARCHITECHURE}_${GQLITE_TARGET_SYSTEM}_${GQLITE_ASM_COMPILER}.${GQLITE_ASM_SUFFIX})
-set(ASM_CONTEXT_SOURCES "src/base/system/fcontext/jump_${GQLITE_CPU_ARCHITECHURE}_${GQLITE_TARGET_SYSTEM}_${GQLITE_ASM_COMPILER}.${GQLITE_ASM_SUFFIX}" 
-									  "src/base/system/fcontext/make_${GQLITE_CPU_ARCHITECHURE}_${GQLITE_TARGET_SYSTEM}_${GQLITE_ASM_COMPILER}.${GQLITE_ASM_SUFFIX}"
+
+message("asm: *_" ${GQLITE_ASM_SUFFUX})
+
+set(ASM_CONTEXT_SOURCES "src/base/system/fcontext/jump_${GQLITE_ASM_SUFFUX}"
+						"src/base/system/fcontext/make_${GQLITE_ASM_SUFFUX}"
 )
 
 
