--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,6 +5,10 @@ set(EXAMPLE_SOURCE ./main.c)
 
 add_executable(example ${EXAMPLE_SOURCE})
 
+IF (UNIX)
+target_link_libraries(example PUBLIC gqlite ${CXX_14_LINK_OPTION})
+ELSE ()
 target_link_libraries(example PUBLIC gqlite)
+ENDIF()
 
 add_test(NAME example COMMAND example)
