--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -170,27 +170,27 @@ ENDIF ()
 target_link_libraries(grammar PUBLIC ${grammar_LINK_OPTIONS})
 target_link_libraries(regress PUBLIC ${regress_LINK_OPTIONS})
 target_link_libraries(benchmark PUBLIC ${benchmark_LINK_OPTIONS})
+target_link_libraries(movielens PUBLIC ${movielens_LINK_OPTIONS})
 # target_link_libraries(fail PUBLIC ${fail_LINK_OPTIONS})
 IF (UNIX)
 target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS})
 target_link_libraries(query PUBLIC ${storage_LINK_OPTIONS})
 if (GQLITE_BUILD_TEST)
-target_link_libraries(storage PUBLIC ${CMAKE_DL_LIBS} m)
-target_link_libraries(query PUBLIC ${CMAKE_DL_LIBS} m)
-target_link_libraries(movielens PUBLIC ${CMAKE_DL_LIBS} m )
-target_link_libraries(grammar PUBLIC ${CMAKE_DL_LIBS} m )
-target_link_libraries(regress PUBLIC ${CMAKE_DL_LIBS} m )
-target_link_libraries(benchmark PUBLIC ${CMAKE_DL_LIBS} m )
+target_link_libraries(storage PUBLIC ${CMAKE_DL_LIBS} m ${CXX_14_LINK_OPTION})
+target_link_libraries(query PUBLIC ${CMAKE_DL_LIBS} m  ${CXX_14_LINK_OPTION})
+target_link_libraries(movielens PUBLIC ${CMAKE_DL_LIBS} m ${CXX_14_LINK_OPTION})
+target_link_libraries(grammar PUBLIC ${CMAKE_DL_LIBS} m ${CXX_14_LINK_OPTION})
+target_link_libraries(regress PUBLIC ${CMAKE_DL_LIBS} m  ${CXX_14_LINK_OPTION})
+target_link_libraries(benchmark PUBLIC ${CMAKE_DL_LIBS} m  ${CXX_14_LINK_OPTION})
 endif(GQLITE_BUILD_TEST)
 ELSE() # UNIX
 target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS})
 target_link_libraries(query PUBLIC ${storage_LINK_OPTIONS})
 ENDIF() # UNIX
 # target_link_libraries(algorithm fmt::fmt-header-only)
-target_link_libraries(movielens PUBLIC ${movielens_LINK_OPTIONS} )
 IF (WIN32)
 target_link_libraries(vnet PRIVATE ${vnet_LINK_OPTIONS})
-ELSE ()
+ELSE (WIN32)
 if (CMAKE_SYSTEM_NAME MATCHES "Android")
 target_link_libraries(vnet ${vnet_LINK_OPTIONS} log)
 target_link_libraries(decision log)
@@ -203,9 +203,9 @@ target_link_libraries(algorithm log)
 # target_link_libraries(movielens log)
 target_link_libraries(coroutine gqlite log)
 else ()
-target_link_libraries(vnet ${vnet_LINK_OPTIONS} pthread)
+target_link_libraries(vnet ${vnet_LINK_OPTIONS} pthread ${CXX_14_LINK_OPTION})
 endif ()
-ENDIF ()
+ENDIF (WIN32)
 
 # find_package(Python3 COMPONENTS Interpreter Development)
 
