add part of native graph storage api

--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -1,7 +1,4 @@
 cmake_minimum_required(VERSION 3.0)
-project(GQLlite_Tool)
-
-set(CMAKE_CXX_STANDARD 14)
 
 include_directories(../include)
 
@@ -36,3 +33,11 @@ target_link_libraries(gqldump PUBLIC gqlite fmt-header-only ${CXX_14_LINK_OPTION
 
 add_test(NAME example_basketballplayer_prepare COMMAND l2lite -fngql -s../data/basketballplayer-2.X.ngql -o../test/basketballplayer-2.X/basketballplayer-2.X.gql
 	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+
+# add_custom_target(
+#   strip_binary strip -s -R .comment -R .gnu.version --strip-unneeded gql
+#   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tool
+#   COMMENT "strip gql ..."
+#   DEPENDS gql
+# )
+install(TARGETS gql DESTINATION bin)
