--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ set(GQLITE_ASM_SUFFUX ${GQLITE_CPU_ARCHITECHURE}_${GQLITE_ASM_ABI}_${GQLITE_ASM_
 set(CMAKE_CXX_STANDARD 17)
 #set(CXX_14_LINK_OPTION stdc++fs)
 IF (WIN32)
+add_compile_definitions(_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
 enable_language(ASM_MASM)
 # foreach(CMAKE_TARGET_FLAG
