--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -125,6 +125,9 @@ set(COROUTINE_SOURCE ./coro.cpp
   ${SYMBOLS_SOURCE}
 )
 
+set(INSTRUCTION_SOURCE ./instructions.cpp
+)
+
 IF (APPLE)
 ELSEIF (UNIX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -finstrument-functions")
@@ -145,6 +148,7 @@ add_executable(match ${MATCH_SOURCE})
 # add_executable(fail ${FAIL_SOURCE})
 add_executable(benchmark ${BENCHMARK_SOURCE})
 add_executable(coroutine ${ASM_COROUTINE_SOURCES} ${COROUTINE_SOURCE})
+add_executable(instructions ${INSTRUCTION_SOURCE})
 # set_source_files_properties(${ASM_COROUTINE_SOURCES} PROPERTIES COMPILE_FLAGS "/safeseh")
 
 set(storage_LINK_OPTIONS fmt::fmt-header-only mdbx-static)
@@ -153,6 +157,7 @@ set(grammar_LINK_OPTIONS gqlite fmt::fmt-header-only)
 set(movielens_LINK_OPTIONS gqlite)
 set(regress_LINK_OPTIONS gqlite fmt::fmt-header-only)
 set(benchmark_LINK_OPTIONS gqlite fmt::fmt-header-only)
+set(instructions_LINK_OPTIONS gqlite)
 # set(fail_LINK_OPTIONS gqlite)
 IF (UNIX AND NOT APPLE AND NOT (CMAKE_SYSTEM_NAME MATCHES "Android"))
 set(TARGETS_OF_LEAK_TO_CHECK storage movielens decision infomation decision match query)
@@ -171,6 +176,7 @@ target_link_libraries(grammar PUBLIC ${grammar_LINK_OPTIONS})
 target_link_libraries(regress PUBLIC ${regress_LINK_OPTIONS})
 target_link_libraries(benchmark PUBLIC ${benchmark_LINK_OPTIONS})
 target_link_libraries(movielens PUBLIC ${movielens_LINK_OPTIONS})
+target_link_libraries(instructions PUBLIC ${instructions_LINK_OPTIONS})
 # target_link_libraries(fail PUBLIC ${fail_LINK_OPTIONS})
 IF (UNIX)
 target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS})
@@ -217,6 +223,7 @@ ENDIF (WIN32)
 # )
 # add_dependencies(storage before_test)
 add_test(NAME storage COMMAND storage)
+add_test(NAME instructions COMMAND instructions)
 add_test(NAME algorithm COMMAND algorithm)
 add_test(NAME query COMMAND query)
 add_test(NAME grammar COMMAND grammar)
