--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,7 @@ add_definitions(-DCATCH_CONFIG_MAIN -DCATCH_CONFIG_ENABLE_BENCHMARKING)
 add_definitions(-D_WORKING_DIR_=\"${CMAKE_SOURCE_DIR}\")
 
 if (GQLITE_BUILD_TEST)
+# find_package(CUDA)
 if (UNIX)
 set(SYMBOLS_SOURCE ../src/base/Debug.cpp)
 endif(UNIX)
@@ -128,6 +129,9 @@ set(COROUTINE_SOURCE ./coro.cpp
 set(INSTRUCTION_SOURCE ./instructions.cpp
 )
 
+set(FROG_SOURCE ./frog.cpp
+)
+
 IF (APPLE)
 ELSEIF (UNIX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -finstrument-functions")
@@ -149,6 +153,7 @@ add_executable(match ${MATCH_SOURCE})
 add_executable(benchmark ${BENCHMARK_SOURCE})
 add_executable(coroutine ${ASM_COROUTINE_SOURCES} ${COROUTINE_SOURCE})
 add_executable(instructions ${INSTRUCTION_SOURCE})
+add_executable(frog ${FROG_SOURCE})
 # set_source_files_properties(${ASM_COROUTINE_SOURCES} PROPERTIES COMPILE_FLAGS "/safeseh")
 
 set(storage_LINK_OPTIONS fmt::fmt-header-only mdbx-static)
@@ -158,6 +163,7 @@ set(movielens_LINK_OPTIONS gqlite)
 set(regress_LINK_OPTIONS gqlite fmt::fmt-header-only)
 set(benchmark_LINK_OPTIONS gqlite fmt::fmt-header-only)
 set(instructions_LINK_OPTIONS gqlite)
+set(frog_LINK_OPTIONS gqlite)
 # set(fail_LINK_OPTIONS gqlite)
 IF (UNIX AND NOT APPLE AND NOT (CMAKE_SYSTEM_NAME MATCHES "Android"))
 set(TARGETS_OF_LEAK_TO_CHECK storage movielens decision infomation decision match query)
@@ -177,6 +183,7 @@ target_link_libraries(regress PUBLIC ${regress_LINK_OPTIONS})
 target_link_libraries(benchmark PUBLIC ${benchmark_LINK_OPTIONS})
 target_link_libraries(movielens PUBLIC ${movielens_LINK_OPTIONS})
 target_link_libraries(instructions PUBLIC ${instructions_LINK_OPTIONS})
+target_link_libraries(frog PUBLIC ${frog_LINK_OPTIONS})
 # target_link_libraries(fail PUBLIC ${fail_LINK_OPTIONS})
 IF (UNIX)
 target_link_libraries(storage PUBLIC ${storage_LINK_OPTIONS})
@@ -224,7 +231,7 @@ ENDIF (WIN32)
 # add_dependencies(storage before_test)
 add_test(NAME storage COMMAND storage)
 add_test(NAME instructions COMMAND instructions)
-add_test(NAME algorithm COMMAND algorithm)
+add_test(NAME algorithm COMMAND algorithm)	# graph algorithms
 add_test(NAME query COMMAND query)
 add_test(NAME grammar COMMAND grammar)
 add_test(NAME ptree COMMAND ptree)
@@ -246,6 +253,7 @@ add_test(NAME regress_util COMMAND regress --inputdir=./walk --outputdir=./util 
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 add_test(NAME regress_error COMMAND regress --inputdir=./error --outputdir=./error
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+add_test(NAME schedule COMMAND frog)
 add_test(NAME movielens COMMAND movielens)
 add_test(NAME vnet COMMAND vnet)
 add_test(NAME coroutine COMMAND coroutine)
